[package]
name = "ant-on-the-web"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing", "json"] }
axum-extra = "0.7.7"
axum-macros = "0.3.8"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
chrono = { version = "0.4.33", features = ["serde"] }
dotenv = "0.15.0"
double-map = "0.14.0"
futures = "0.3.30"
hyper = "0.14.28"
postgres-types = { version = "0.2.6", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = [
  "with-uuid-1",
  "with-serde_json-1",
  "with-chrono-0_4",
] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = [
  "fs",
  "trace",
  "metrics",
  "cors",
  "normalize-path",
] }
tracing = { version = "0.1.40", features = ["max_level_debug"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
validator = "0.16.1"
twilio-rs = "0.1.1"
serde_derive = "1.0.196"
ant-data-farm = { path = "../../ant-data-farm-client" }
ant-library = { path = "../../ant-library" }
